[project]
name = "pyhtmlproofer"
dynamic = ["version"]
description = "pyHtmlProofer - A tool for validating internal & external links in HTML files / Websites"
authors = [
    {name = "Rehan Haider", email = "email@rehanhaider.com"},
]
dependencies = [
    "requests>=2.28.1",
    "lxml>=4.9.1",
    "html5lib>=1.1",
    "beautifulsoup4>=4.11.1",
    "rich>=12.5.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
includes = []
version = { source = "file", path = "src/__version__.py" }

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pyhtmlproofer @ file:///${PROJECT_ROOT}",
    "pre-commit>=2.20.0",
]

[tool.pdm.build]
package-dir = "src"


[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=1 --capture=no"
testpaths = "tests"
console_output_style = "classic"
log_cli = "True"
log_level = "DEBUG"
log_format = "%(levelname)s %(message)s"
log_file = "pytest.log"