[project]
name = "pyHtmlProofer"
dynamic = ["version"]
description = "pyHtmlProofer - A tool for validating internal & external links in HTML files / Websites"
authors = [{ name = "Rehan Haider", email = "email@rehanhaider.com" }]
dependencies = [
    "requests>=2.28.1",
    "lxml>=4.9.1",
    "html5lib>=1.1",
    "beautifulsoup4>=4.11.1",
    "rich>=12.5.1",
]

requires-python = ">=3.7"
readme = "README.md"
license = { text = "AGPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]


[project.urls]
# Set project url to the GitHub repo
Source = "https://github.com/rehanhaider/pyhtmlproofer"
#Funding = "https://github.com/sponsors/rehanhaider"

[project.scripts]
"pyhtmlproofer" = "pyHtmlProofer.__main__:main"

[project.optional-dependencies]

[tool.pdm]
version = { source = "file", path = "src/pyhtmlproofer/__version__.py" }
homepage = "https://pypi.org/project/pyhtmlproofer"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "pyhtmlproofer @ file:///${PROJECT_ROOT}",
    "pre-commit>=2.20.0",
]


[tool.pdm.scripts]
all = { call = "tests.all:main" }
pre_test = { shell = "unzip tests/cases.zip" }
test = { shell = "pytest" }
post_test = { shell = "zip -r tests/cases.zip tests/cases && rm -rf tests/cases" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--maxfail=1 --capture=no"
testpaths = "tests"
console_output_style = "classic"
log_cli = "True"
log_level = "DEBUG"
log_format = "%(levelname)s %(message)s"
log_file = "pytest.log"


[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
